# Result-CPP

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
examples/: basic_usage.cpp  chaining_operations.cpp  file_handling.cpp  handling_errors.cpp
include/fst/: result.hpp
